# machine-learning-zoomcamp-2025-homework

./: README.md
01-intro/: Homework01.ipynb  Introduction to numpy.ipynb  lesson1-9.ipynb
02-regression/: Homework2-Question4.ipynb  Homework2-Question5.ipynb  Homework2-Question6.ipynb  Homework2.ipynb
02-regression/.ipynb_checkpoints/: Homework2-Question4-checkpoint.ipynb  Homework2-Question5-checkpoint.ipynb
03-classification/: Homework3_questions1And2.ipynb  Homework3_questions5.ipynb
04-evaluation/: Homework04.ipynb
05-deployment/: Dockerfile  Homework5.ipynb  predict.py  predict_fastapi.py  pyproject.toml  question4.py
05-deployment/.ipynb_checkpoints/: predict-checkpoint.py
06-decisiontree/: Homework6.ipynb
09-serverless/: 09-Homework.ipynb  Dockerfile  Test_Lambda_Script.ipynb  Test_Lambda_Script.py  lambda_function.py
10-kubernetes/: deployment.yaml  service.yaml
capstone-02/: README.md  capstone-evaluation.ipynb  capstone-selected-model.ipynb  predict.py  pyproject.toml  train.py
midterm/: README.md  midterm-selected-model.ipynb  midterm.ipynb  predict.py  pyproject.toml
midterm/.ipynb_checkpoints/: Dockerfile-checkpoint  midterm-checkpoint.ipynb  train-checkpoint.py
